--- a/latihan_model_serving_flask/solution/notebook.ipynb
+++ b/latihan_model_serving_flask/solution/notebook.ipynb
@@ -12,6 +12,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
